fixed overlapping elements on subscribe/ask pages

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ nav ul li ul li a{
   transform: rotate(-45deg);
 }
 
-/* ----- Leave a comment form ----- */
+/* ----- Ask us a question form ----- */
 
 .card {
   background-color: #fff;
@@ -226,8 +226,67 @@ nav ul li ul li a{
   color: #262626;
 }
 
-/* ----- Store Images -----  */
 
+/* ----- Rotating partner logos -----  */
+
+
+@mixin white-gradient {
+	background: linear-gradient(to right,  rgb(3, 3, 3) 0%,rgba(255,255,255,0) 100%);
+}
+
+$animationSpeed: 40s;
+
+// Animation
+@keyframes scroll {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-250px * 7))}
+}
+
+
+// Styling
+.slider {
+	background: white;
+	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
+	height: 100px;
+	margin: auto;
+	overflow:hidden;
+	position: relative;
+	width: 960px;
+	
+	&::before,
+	&::after {
+		@include white-gradient;
+		content: "";
+		height: 100px;
+		position: absolute;
+		width: 200px;
+		z-index: 2;
+	}
+	
+	&::after {
+		right: 0;
+		top: 0;
+		transform: rotateZ(180deg);
+	}
+
+	&::before {
+		left: 0;
+		top: 0;
+	}
+	
+	.slide-track {
+		animation: scroll $animationSpeed linear infinite;
+		display: flex;
+		width: calc(250px * 14);
+	}
+	
+	.slide {
+		height: 100px;
+		width: 250px;
+	}
+}
+
+/* ----- Store Images -----  */
 
 .photo {
   clear: both;
@@ -565,6 +624,10 @@ hr {
 
 }
 
+.confirmation-page {
+  align-items: center;
+}
+
 
 @media only screen and (max-width: 851px) {
 
@@ -612,7 +675,7 @@ hr {
     text-overflow:clip;
     font-size: 200%;
   }
-
+/* 
   .right-about-heading h2 {
     width: 100%;
     height: auto;
@@ -632,7 +695,7 @@ hr {
     text-indent: 10px;
     padding-top: 2px;
     padding-bottom: 4px;
-  }
+  } */
 
   #cover-text {
     width: 30%;
@@ -685,11 +748,11 @@ hr {
   }
 
   .right-card {
-    float: right;
+    float: center;
   }
   
   .left-card {
-    float: left;
+    float: center;
   }
   
   .top-card {
